extends Control

@onready var lbl_pergunta = $Pergunta
@onready var lbl_resultado = $Resultado
@onready var botoes = [
	$VBoxContainer/BotaoA,
	$VBoxContainer/BotaoB,
	$VBoxContainer/BotaoC,
	$VBoxContainer/BotaoD
]
@onready var sprite_player = $Jogador
@onready var sprite_bot = $Bot
@onready var lbl_status_player = $StatusPlayer
@onready var lbl_status_bot = $StatusBot
@onready var lbl_dificuldade = $LblDificuldade

# === CONFIGURA√á√ïES ===
const HP_MAX = 20
const MANA_MAX = 10

var player = {"hp": HP_MAX, "mana": MANA_MAX, "curas": 0}
var bot = {"hp": HP_MAX, "mana": MANA_MAX, "curas": 0}

var perguntas = []
var pergunta_atual = 0
var acertos_turno = 0
var perguntas_turno = 0

var turno_do_player = true
var em_acao = false

# =====================================================
func _ready():
	# Mostrar dificuldade
	if has_node("LblDificuldade"):
		lbl_dificuldade.text = "üéØ Dificuldade: " + Global.dificuldade_escolhida

	# Carregar sprites
	if Global.personagem_selecionado.has("sprite"):
		sprite_player.texture = Global.personagem_selecionado["sprite"]
	if Global.personagem_bot_selecionado.has("sprite"):
		sprite_bot.texture = Global.personagem_bot_selecionado["sprite"]

	# ====== CARREGAR PERGUNTAS ======
	if "Matem√°tica" in Global.materias_escolhidas:
		perguntas += [
			{"texto": "Quanto √© 9 √ó 7?", "alternativas": ["56", "63", "64", "72"], "correta": 1},
			{"texto": "Quanto √© 12 √∑ 3?", "alternativas": ["6", "3", "4", "5"], "correta": 2},
			{"texto": "Qual √© o valor de 15 + 8?", "alternativas": ["21", "22", "23", "24"], "correta": 2},
			{"texto": "Qual √© o dobro de 9?", "alternativas": ["16", "17", "18", "20"], "correta": 2}
		]

	# ==== HIST√ìRIA ====
	if "Hist√≥ria" in Global.materias_escolhidas:
		perguntas += [
			{"texto": "Quem foi o primeiro presidente do Brasil?", "alternativas": ["Deodoro da Fonseca", "Dom Pedro II", "Lula", "Get√∫lio Vargas"], "correta": 0},
			{"texto": "Em que ano o Brasil foi descoberto?", "alternativas": ["1492", "1500", "1822", "1889"], "correta": 1},
			{"texto": "Quem proclamou a independ√™ncia do Brasil?", "alternativas": ["Tiradentes", "Dom Pedro I", "Dom Jo√£o VI", "Get√∫lio Vargas"], "correta": 1},
			{"texto": "A Revolu√ß√£o Francesa come√ßou em qual pa√≠s?", "alternativas": ["Inglaterra", "Fran√ßa", "Espanha", "It√°lia"], "correta": 1}
		]

	# ==== CI√äNCIAS ====
	if "Ci√™ncias" in Global.materias_escolhidas:
		perguntas += [
			{"texto": "Qual planeta √© conhecido como o planeta vermelho?", "alternativas": ["Marte", "V√™nus", "J√∫piter", "Saturno"], "correta": 0},
			{"texto": "A √°gua ferve a quantos graus Celsius?", "alternativas": ["90", "100", "110", "120"], "correta": 1},
			{"texto": "O oxig√™nio √© essencial para qual fun√ß√£o do corpo?", "alternativas": ["Respira√ß√£o", "Digest√£o", "Circula√ß√£o", "Audi√ß√£o"], "correta": 0},
			{"texto": "Qual √≥rg√£o bombeia sangue?", "alternativas": ["Pulm√£o", "Est√¥mago", "Cora√ß√£o", "C√©rebro"], "correta": 2}
		]

	# ==== GEOGRAFIA ====
	if "Geografia" in Global.materias_escolhidas:
		perguntas += [
			{"texto": "Qual √© o maior pa√≠s do mundo?", "alternativas": ["China", "EUA", "R√∫ssia", "Canad√°"], "correta": 2},
			{"texto": "Qual √© o rio mais extenso do Brasil?", "alternativas": ["S√£o Francisco", "Paran√°", "Amazonas", "Tiet√™"], "correta": 2},
			{"texto": "Qual √© o continente onde est√° o Egito?", "alternativas": ["√Åfrica", "Europa", "√Åsia", "Oceania"], "correta": 0},
			{"texto": "Qual √© o ponto mais alto do mundo?", "alternativas": ["Monte Everest", "Pico da Neblina", "Kilimanjaro", "Andes"], "correta": 0}
		]

	# ==== ARTES ====
	if "Artes" in Global.materias_escolhidas:
		perguntas += [
			{"texto": "Quem pintou a Mona Lisa?", "alternativas": ["Van Gogh", "Leonardo da Vinci", "Picasso", "Michelangelo"], "correta": 1},
			{"texto": "Qual √© o nome do estilo de arte que usa cubos?", "alternativas": ["Cubismo", "Realismo", "Impressionismo", "Futurismo"], "correta": 0},
			{"texto": "Quem pintou 'Noite Estrelada'?", "alternativas": ["Monet", "Van Gogh", "Da Vinci", "Rembrandt"], "correta": 1},
			{"texto": "O que √© escultura?", "alternativas": ["Pintura com tinta", "Obra feita em 3D", "Fotografia", "Desenho animado"], "correta": 1}
		]

	# ==== EDUCA√á√ÉO F√çSICA ====
	if "Educa√ß√£o F√≠sica" in Global.materias_escolhidas:
		perguntas += [
			{"texto": "Quantos jogadores tem um time de futebol?", "alternativas": ["9", "10", "11", "12"], "correta": 2},
			{"texto": "Qual esporte usa raquete e bola amarela?", "alternativas": ["T√™nis", "V√¥lei", "Basquete", "Futebol"], "correta": 0},
			{"texto": "Em qual esporte se usa traves?", "alternativas": ["Basquete", "Futebol", "T√™nis", "V√¥lei"], "correta": 1},
			{"texto": "Quantos pontos vale uma cesta de 3 no basquete?", "alternativas": ["2", "3", "4", "5"], "correta": 1}
		]

	# ==== PORTUGU√äS ====
	if "Portugu√™s" in Global.materias_escolhidas:
		perguntas += [
			{"texto": "Qual palavra est√° escrita corretamente?", "alternativas": ["Excess√£o", "Execess√£o", "Exce√ß√£o", "Ece√ß√£o"], "correta": 2},
			{"texto": "Qual √© o plural de 'p√£o'?", "alternativas": ["p√£os", "p√£es", "p√£eses", "pa√µes"], "correta": 1},
			{"texto": "Qual √© o ant√¥nimo de 'feliz'?", "alternativas": ["Alegre", "Triste", "Contente", "Divertido"], "correta": 1},
			{"texto": "Qual √© o verbo na frase 'Ela correu ontem'?", "alternativas": ["Ela", "correu", "ontem", "nenhuma"], "correta": 1}
		]

	perguntas.shuffle()

	# Inicia o jogo
	atualizar_status()
	gerar_pergunta()

# =====================================================
func gerar_pergunta():
	if perguntas.size() == 0:
		lbl_pergunta.text = "Sem perguntas dispon√≠veis!"
		return

	var p = perguntas[randi() % perguntas.size()]
	lbl_pergunta.text = p["texto"]
	for i in range(botoes.size()):
		botoes[i].text = p["alternativas"][i]
		botoes[i].disconnect_all("pressed")
		botoes[i].connect("pressed", Callable(self, "_responder").bind(i, p))

# =====================================================
func _responder(indice, pergunta):
	if em_acao:
		return

	perguntas_turno += 1
	if indice == pergunta["correta"]:
		acertos_turno += 1
		lbl_resultado.text = "‚úÖ Correto!"
	else:
		lbl_resultado.text = "‚ùå Errado!"

	await get_tree().create_timer(0.8).timeout

	if perguntas_turno < 3:
		gerar_pergunta()
	else:
		if turno_do_player:
			acao_player()
		else:
			acao_bot()

# =====================================================
func acao_player():
	em_acao = true

	var escolha = randi() % 2 # 0 ataque, 1 cura (simples, pode ser bot√£o depois)
	if escolha == 0:
		executar_ataque(player, bot)
	else:
		executar_cura(player)

	regenerar_mana(player)
	em_acao = false
	turno_do_player = false
	acao_bot()

# =====================================================
func acao_bot():
	em_acao = true

	var chance_acerto = _chance_dificuldade(Global.dificuldade_escolhida)
	var acertos_bot = 0
	for i in range(3):
		if randf() <= chance_acerto:
			acertos_bot += 1

	var escolha = randi() % 2 # aleat√≥rio: atacar ou curar
	if escolha == 0:
		executar_ataque(bot, player, acertos_bot)
	else:
		executar_cura(bot, acertos_bot)

	regenerar_mana(bot)
	em_acao = false
	turno_do_player = true
	gerar_pergunta()

# =====================================================
func executar_ataque(atacante, defensor, acertos=acertos_turno):
	var dano_base = 2
	var custo_mana = 3

	if atacante["mana"] < custo_mana:
		lbl_resultado.text = "‚ö†Ô∏è Sem mana suficiente!"
		return

	atacante["mana"] -= custo_mana

	if acertos == 0:
		lbl_resultado.text = "‚ùå Ataque falhou!"
		return
	elif acertos == 3:
		dano_base += 1

	defensor["hp"] -= dano_base
	lbl_resultado.text = "‚öîÔ∏è Ataque causou %d de dano!" % dano_base
	atualizar_status()
	verificar_fim()

	acertos_turno = 0
	perguntas_turno = 0

# =====================================================
func executar_cura(jogador, acertos=acertos_turno):
	if jogador["curas"] >= 3:
		lbl_resultado.text = "üö´ Limite de curas atingido!"
		return

	var cura = 0
	match acertos:
		1:
			cura = 1
		2:
			cura = 2
		3:
			cura = 4

	jogador["hp"] = min(HP_MAX, jogador["hp"] + cura)
	jogador["curas"] += 1
	lbl_resultado.text = "ü©π Curou %d de HP!" % cura
	atualizar_status()

	acertos_turno = 0
	perguntas_turno = 0

# =====================================================
func regenerar_mana(personagem):
	personagem["mana"] = min(MANA_MAX, personagem["mana"] + 3)
	atualizar_status()

# =====================================================
func _chance_dificuldade(nivel):
	match nivel:
		"F√°cil":
			return 0.3
		"Normal":
			return 0.5
		"Dif√≠cil":
			return 0.75
		"Imposs√≠vel":
			return 0.9
		_:
			return 0.5

# =====================================================
func atualizar_status():
	lbl_status_player.text = "üë§ Player | HP: %d | Mana: %d | Curas: %d" % [player["hp"], player["mana"], player["curas"]]
	lbl_status_bot.text = "ü§ñ Bot | HP: %d | Mana: %d | Curas: %d" % [bot["hp"], bot["mana"], bot["curas"]]

# =====================================================
func verificar_fim():
	if player["hp"] <= 0 and bot["hp"] <= 0:
		lbl_resultado.text = "ü§ù Empate!"
	elif player["hp"] <= 0:
		lbl_resultado.text = "üíÄ Voc√™ perdeu!"
	elif bot["hp"] <= 0:
		lbl_resultado.text = "üèÜ Vit√≥ria!"

func _on_voltar_pressed() :
	get_tree().change_scene_to_file("res://scenes/Menu Scenes/Menu.tscn")
