extends Control

# ======================
# VARI√ÅVEIS PRINCIPAIS
# ======================
@onready var sprite_player = $Jogador
@onready var sprite_bot = $Bot

@onready var lbl_pergunta = $Pergunta
@onready var lbl_status_player = $StatusPlayer
@onready var lbl_status_bot = $StatusBot
@onready var lbl_resultado = $Resultado

@onready var botoes = [
	$PerguntaContainer/BotaoA,
	$PerguntaContainer/BotaoB,
	$PerguntaContainer/BotaoC,
	$PerguntaContainer/BotaoD
]

@onready var btn_pular = $AcoesContainer/Pular_Turno
@onready var btn_fraco = $AcoesContainer/Ataque_Fraco
@onready var btn_medio = $AcoesContainer/Ataque_Medio
@onready var btn_forte = $AcoesContainer/Ataque_Forte
@onready var btn_curar = $AcoesContainer/Cura

@onready var container_perguntas = $PerguntaContainer
@onready var container_acoes = $AcoesContainer

# ======================
# ATRIBUTOS DOS PERSONAGENS
# ======================

var player = {"hp": 20, "mana": 10, "curas": 0}
var bot = {"hp": 20, "mana": 10, "curas": 0}
var max_mana = 10
var max_curas = 3
var jogo_encerrado = false

# ======================
# VARI√ÅVEIS DE CONTROLE
# ======================

var acao_escolhida = ""
var perguntas = []
var em_acao = false
var acertos_turno = 0
var perguntas_restantes = 0

# ======================
# IN√çCIO
# ======================

func _ready() -> void:
	if Global.personagem_selecionado.has("sprite"):
		sprite_player.texture = Global.personagem_selecionado["sprite"]
	if Global.personagem_bot_selecionado.has("sprite"):
		sprite_bot.texture = Global.personagem_bot_selecionado["sprite"]

	
	randomize()
	conectar_acoes()
	carregar_perguntas()
	atualizar_status()
	container_acoes.visible = true
	container_perguntas.visible = false
	lbl_resultado.text = "Escolha sua a√ß√£o."

# ======================
# CONEX√ÉO DOS BOT√ïES
# ======================

func conectar_acoes() -> void:
	btn_pular.pressed.connect(_pular_turno)
	btn_fraco.pressed.connect(func(): escolher_acao("ataque_fraco"))
	btn_medio.pressed.connect(func(): escolher_acao("ataque_medio"))
	btn_forte.pressed.connect(func(): escolher_acao("ataque_forte"))
	btn_curar.pressed.connect(func(): escolher_acao("cura"))

# ======================
# PERGUNTAS
# ======================

func carregar_perguntas() -> void:

	if "Matem√°tica" in Global.materias_escolhidas:
		perguntas += [
			{"texto": "Quanto √© 9 √ó 7?", "alternativas": ["56", "63", "64", "72"], "correta": 1},
			{"texto": "Quanto √© 12 √∑ 3?", "alternativas": ["6", "3", "4", "5"], "correta": 2},
			{"texto": "Qual √© o valor de 15 + 8?", "alternativas": ["21", "22", "23", "24"], "correta": 2},
			{"texto": "Qual √© o dobro de 9?", "alternativas": ["16", "17", "18", "20"], "correta": 2}
		]

	# ==== HIST√ìRIA ====
	if "Hist√≥ria" in Global.materias_escolhidas:
		perguntas += [
			{"texto": "Quem foi o primeiro presidente do Brasil?", "alternativas": ["Deodoro da Fonseca", "Dom Pedro II", "Lula", "Get√∫lio Vargas"], "correta": 0},
			{"texto": "Em que ano o Brasil foi descoberto?", "alternativas": ["1492", "1500", "1822", "1889"], "correta": 1},
			{"texto": "Quem proclamou a independ√™ncia do Brasil?", "alternativas": ["Tiradentes", "Dom Pedro I", "Dom Jo√£o VI", "Get√∫lio Vargas"], "correta": 1},
			{"texto": "A Revolu√ß√£o Francesa come√ßou em qual pa√≠s?", "alternativas": ["Inglaterra", "Fran√ßa", "Espanha", "It√°lia"], "correta": 1}
		]

	# ==== CI√äNCIAS ====
	if "Ci√™ncias" in Global.materias_escolhidas:
		perguntas += [
			{"texto": "Qual planeta √© conhecido como o planeta vermelho?", "alternativas": ["Marte", "V√™nus", "J√∫piter", "Saturno"], "correta": 0},
			{"texto": "A √°gua ferve a quantos graus Celsius?", "alternativas": ["90", "100", "110", "120"], "correta": 1},
			{"texto": "O oxig√™nio √© essencial para qual fun√ß√£o do corpo?", "alternativas": ["Respira√ß√£o", "Digest√£o", "Circula√ß√£o", "Audi√ß√£o"], "correta": 0},
			{"texto": "Qual √≥rg√£o bombeia sangue?", "alternativas": ["Pulm√£o", "Est√¥mago", "Cora√ß√£o", "C√©rebro"], "correta": 2}
		]

	# ==== GEOGRAFIA ====
	if "Geografia" in Global.materias_escolhidas:
		perguntas += [
			{"texto": "Qual √© o maior pa√≠s do mundo?", "alternativas": ["China", "EUA", "R√∫ssia", "Canad√°"], "correta": 2},
			{"texto": "Qual √© o rio mais extenso do Brasil?", "alternativas": ["S√£o Francisco", "Paran√°", "Amazonas", "Tiet√™"], "correta": 2},
			{"texto": "Qual √© o continente onde est√° o Egito?", "alternativas": ["√Åfrica", "Europa", "√Åsia", "Oceania"], "correta": 0},
			{"texto": "Qual √© o ponto mais alto do mundo?", "alternativas": ["Monte Everest", "Pico da Neblina", "Kilimanjaro", "Andes"], "correta": 0}
		]

	# ==== ARTES ====
	if "Artes" in Global.materias_escolhidas:
		perguntas += [
			{"texto": "Quem pintou a Mona Lisa?", "alternativas": ["Van Gogh", "Leonardo da Vinci", "Picasso", "Michelangelo"], "correta": 1},
			{"texto": "Qual √© o nome do estilo de arte que usa cubos?", "alternativas": ["Cubismo", "Realismo", "Impressionismo", "Futurismo"], "correta": 0},
			{"texto": "Quem pintou 'Noite Estrelada'?", "alternativas": ["Monet", "Van Gogh", "Da Vinci", "Rembrandt"], "correta": 1},
			{"texto": "O que √© escultura?", "alternativas": ["Pintura com tinta", "Obra feita em 3D", "Fotografia", "Desenho animado"], "correta": 1}
		]

	# ==== EDUCA√á√ÉO F√çSICA ====
	if "Educa√ß√£o F√≠sica" in Global.materias_escolhidas:
		perguntas += [
			{"texto": "Quantos jogadores tem um time de futebol?", "alternativas": ["9", "10", "11", "12"], "correta": 2},
			{"texto": "Qual esporte usa raquete e bola amarela?", "alternativas": ["T√™nis", "V√¥lei", "Basquete", "Futebol"], "correta": 0},
			{"texto": "Em qual esporte se usa traves?", "alternativas": ["Basquete", "Futebol", "T√™nis", "V√¥lei"], "correta": 1},
			{"texto": "Quantos pontos vale uma cesta de 3 no basquete?", "alternativas": ["2", "3", "4", "5"], "correta": 1}
		]

	# ==== PORTUGU√äS ====
	if "Portugu√™s" in Global.materias_escolhidas:
		perguntas += [
			{"texto": "Qual palavra est√° escrita corretamente?", "alternativas": ["Excess√£o", "Execess√£o", "Exce√ß√£o", "Ece√ß√£o"], "correta": 2},
			{"texto": "Qual √© o plural de 'p√£o'?", "alternativas": ["p√£os", "p√£es", "p√£eses", "pa√µes"], "correta": 1},
			{"texto": "Qual √© o ant√¥nimo de 'feliz'?", "alternativas": ["Alegre", "Triste", "Contente", "Divertido"], "correta": 1},
			{"texto": "Qual √© o verbo na frase 'Ela correu ontem'?", "alternativas": ["Ela", "correu", "ontem", "nenhuma"], "correta": 1}
		]

	perguntas.shuffle()

func gerar_pergunta() -> void:
	if perguntas.is_empty():
		lbl_pergunta.text = "Sem perguntas dispon√≠veis!"
		return

	var p = perguntas[randi() % perguntas.size()]
	lbl_pergunta.text = p["texto"]

	for i in range(botoes.size()):
		var btn = botoes[i]
		btn.text = p["alternativas"][i]

		for connection in btn.pressed.get_connections():
			if connection.callable.get_object() == self:
				btn.pressed.disconnect(connection.callable)

		btn.pressed.connect(func(): _responder(i, p))

# ======================
# ESCOLHER A√á√ÉO
# ======================

func escolher_acao(tipo: String) -> void:
	if em_acao or jogo_encerrado:
		return
	em_acao = true
	acao_escolhida = tipo
	acertos_turno = 0
	perguntas_restantes = 3

	if tipo == "pular":
		_pular_turno()
	else:
		container_acoes.visible = false
		container_perguntas.visible = true
		gerar_pergunta()

func _responder(indice: int, pergunta: Dictionary) -> void:
	var correta = pergunta["correta"]

	if indice == correta:
		acertos_turno += 1
		lbl_resultado.text = "‚úÖ Resposta correta!"
	else:
		lbl_resultado.text = "‚ùå Resposta errada!"

	perguntas_restantes -= 1

	if perguntas_restantes > 0:
		await get_tree().create_timer(1.2).timeout
		gerar_pergunta()
	else:
		await get_tree().create_timer(1.2).timeout
		avaliar_turno()

func avaliar_turno() -> void:
	container_perguntas.visible = false

	if acertos_turno == 0:
		lbl_resultado.text = "‚ùå Nenhuma resposta certa! A a√ß√£o falhou!"
		em_acao = false
		await get_tree().create_timer(1.5).timeout
		fim_turno()
	else:
		lbl_resultado.text = "‚úÖ %d acerto(s)! Executando a√ß√£o..." % acertos_turno
		await get_tree().create_timer(1.2).timeout
		executar_acao_escolhida()

func _pular_turno() -> void:
	lbl_resultado.text = "‚è≠Ô∏è Voc√™ pulou o turno!"
	fim_turno()

# ======================
# EXECU√á√ÉO DAS A√á√ïES
# ======================

func executar_acao_escolhida() -> void:
	if jogo_encerrado:
		return

	var bonus = 1 if acertos_turno == 3 else 0

	match acao_escolhida:
		"ataque_fraco":
			executar_ataque(player, bot, 1 + bonus, 1)
		"ataque_medio":
			executar_ataque(player, bot, 2 + bonus, 4)
		"ataque_forte":
			executar_ataque(player, bot, 4 + bonus, 5)
		"cura":
			executar_cura(player)

	await get_tree().create_timer(1.5).timeout
	fim_turno()

func executar_ataque(atacante: Dictionary, alvo: Dictionary, dano: int, custo_mana: int) -> void:
	if atacante["mana"] < custo_mana:
		lbl_resultado.text = "‚ö†Ô∏è Mana insuficiente!"
		return
	atacante["mana"] -= custo_mana
	alvo["hp"] -= dano
	lbl_resultado.text = "üí• Causou %d de dano!" % dano
	atualizar_status()
	verificar_fim_de_jogo()

func executar_cura(alvo: Dictionary) -> void:
	if alvo["curas"] >= max_curas:
		lbl_resultado.text = "‚ö†Ô∏è Limite de curas atingido!"
		if alvo == player:
			btn_curar.disabled = true
		return

	if alvo["mana"] < 3:
		lbl_resultado.text = "‚ö†Ô∏è Mana insuficiente!"
		return

	alvo["curas"] += 1
	alvo["mana"] -= 3
	alvo["hp"] = min(alvo["hp"] + 3, 20)
	lbl_resultado.text = "üíä Cura realizada! (%d/%d)" % [alvo["curas"], max_curas]
	if alvo == player and alvo["curas"] >= max_curas:
		btn_curar.disabled = true
	atualizar_status()

# ======================
# FIM DE TURNO
# ======================

func fim_turno() -> void:
	if jogo_encerrado:
		return
	recuperar_mana(player)
	recuperar_mana(bot)
	atualizar_status()
	em_acao = false
	await get_tree().create_timer(1.5).timeout
	acao_bot()

func recuperar_mana(alvo: Dictionary) -> void:
	alvo["mana"] = min(alvo["mana"] + 3, max_mana)

# ======================
# BOT
# ======================

func acao_bot() -> void:
	if jogo_encerrado:
		return

	var escolha = randi() % 4
	if escolha == 3 and bot["curas"] < max_curas:
		bot_tenta_curar()
	else:
		bot_tenta_acao()

	await get_tree().create_timer(1.5).timeout
	fim_turno_jogador()

func bot_tenta_curar() -> void:
	if bot["mana"] >= 3:
		bot["curas"] += 1
		bot["mana"] -= 3
		bot["hp"] = min(bot["hp"] + 3, 20)
		lbl_resultado.text = "ü§ñ Bot se curou!"
	else:
		lbl_resultado.text = "ü§ñ Bot tentou curar, mas n√£o tinha mana!"
	verificar_fim_de_jogo()
	atualizar_status()

func bot_tenta_acao() -> void:
	var chance_acerto = 0.6
	var acertos = 0
	for i in range(3):
		if randf() < chance_acerto:
			acertos += 1

	if acertos == 0:
		lbl_resultado.text = "ü§ñ Bot errou todas as perguntas!"
		return

	var bonus = 1 if acertos == 3 else 0
	var escolha = randi() % 3
	match escolha:
		0:
			executar_ataque(bot, player, 1 + bonus, 1)
			lbl_resultado.text = "ü§ñ Bot atacou fraco!"
		1:
			executar_ataque(bot, player, 2 + bonus, 4)
			lbl_resultado.text = "ü§ñ Bot atacou m√©dio!"
		2:
			executar_ataque(bot, player, 4 + bonus, 5)
			lbl_resultado.text = "ü§ñ Bot atacou forte!"
	atualizar_status()
	verificar_fim_de_jogo()

func fim_turno_jogador() -> void:
	if not jogo_encerrado:
		container_acoes.visible = true
		lbl_resultado.text = "Escolha sua pr√≥xima a√ß√£o."
	atualizar_status()

# ======================
# FIM DE JOGO
# ======================

func verificar_fim_de_jogo() -> void:
	if player["hp"] <= 0:
		lbl_resultado.text = "üíÄ Voc√™ foi derrotado!"
		finalizar_jogo()
	elif bot["hp"] <= 0:
		lbl_resultado.text = "üèÜ Voc√™ venceu!"
		finalizar_jogo()

func finalizar_jogo() -> void:
	jogo_encerrado = true
	container_acoes.visible = false
	container_perguntas.visible = false
	lbl_resultado.text += "\n\nüéÆ Fim de jogo!"
	for btn in [btn_pular, btn_fraco, btn_medio, btn_forte, btn_curar]:
		btn.disabled = true

# ======================
# HUD
# ======================

func atualizar_status() -> void:
	lbl_status_player.text = "‚ù§Ô∏è HP: %d | üíß Mana: %d | üíä Curas: %d/%d" % [player["hp"], player["mana"], player["curas"], max_curas]
	lbl_status_bot.text = "ü§ñ HP: %d | üíß Mana: %d | üíä Curas: %d/%d" % [bot["hp"], bot["mana"], bot["curas"], max_curas]
